// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useResponsive between should render properly for 320 between xs/sm 1`] = `
<div>
  <h1>
    xs
  </h1>
</div>
`;

exports[`useResponsive between should render properly for 400 between sm/md 1`] = `
<div>
  <h1>
    sm
  </h1>
</div>
`;

exports[`useResponsive between should render properly for 568 between sm/md 1`] = `
<div>
  <h1>
    sm
  </h1>
</div>
`;

exports[`useResponsive between should render properly for 768 between md/lg 1`] = `
<div>
  <h1>
    md
  </h1>
</div>
`;

exports[`useResponsive between should render properly for 1024 between lg/xl 1`] = `
<div>
  <h1>
    lg
  </h1>
</div>
`;

exports[`useResponsive custom breakpoints should render properly for 320 between small/medium 1`] = `
<div>
  <h1>
    small
  </h1>
</div>
`;

exports[`useResponsive custom breakpoints should render properly for 568 between small/medium 1`] = `
<div>
  <h1>
    small
  </h1>
</div>
`;

exports[`useResponsive custom breakpoints should render properly for 768 between medium/large 1`] = `
<div>
  <h1>
    medium
  </h1>
</div>
`;

exports[`useResponsive custom breakpoints should render properly for 1024 between medium/large 1`] = `
<div>
  <h1>
    medium
  </h1>
</div>
`;

exports[`useResponsive custom breakpoints should render properly for 1280 between medium/large 1`] = `null`;

exports[`useResponsive max should render properly for 360 with "sm" 1`] = `
<div>
  <h1>
    xs
  </h1>
</div>
`;

exports[`useResponsive max should render properly for 568 with "md" 1`] = `
<div>
  <h1>
    sm
  </h1>
</div>
`;

exports[`useResponsive max should render properly for 568 with "sm" 1`] = `null`;

exports[`useResponsive max should render properly for 800 with "lg" 1`] = `
<div>
  <h1>
    md
  </h1>
</div>
`;

exports[`useResponsive max should render properly for 800 with "md" 1`] = `null`;

exports[`useResponsive max should render properly for 1100 with "lg" 1`] = `null`;

exports[`useResponsive max should render properly for 1100 with "xl" 1`] = `
<div>
  <h1>
    lg
  </h1>
</div>
`;

exports[`useResponsive max should render properly for 1280 with "xl" 1`] = `
<div>
  <h1>
    xl
  </h1>
</div>
`;

exports[`useResponsive min should render properly for 320 with "xs" and "landscape" 1`] = `null`;

exports[`useResponsive min should render properly for 320 with "xs" and "portrait" 1`] = `
<div>
  <h1>
    xs
  </h1>
</div>
`;

exports[`useResponsive min should render properly for 400 with "sm" and "landscape" 1`] = `null`;

exports[`useResponsive min should render properly for 400 with "sm" and "portrait" 1`] = `
<div>
  <h1>
    sm
  </h1>
</div>
`;

exports[`useResponsive min should render properly for 768 with "md" and "landscape" 1`] = `null`;

exports[`useResponsive min should render properly for 768 with "md" and "portrait" 1`] = `
<div>
  <h1>
    md
  </h1>
</div>
`;

exports[`useResponsive min should render properly for 1024 with "lg" and "landscape" 1`] = `
<div>
  <h1>
    lg
  </h1>
</div>
`;

exports[`useResponsive min should render properly for 1024 with "lg" and "portrait" 1`] = `null`;

exports[`useResponsive min should render properly for 1280 with "xl" and "landscape" 1`] = `
<div>
  <h1>
    xl
  </h1>
</div>
`;

exports[`useResponsive min should render properly for 1280 with "xl" and "portrait" 1`] = `null`;

exports[`useResponsive resize should update the matcher with a window.resize 1`] = `
<div>
  <h1>
    lg
  </h1>
</div>
`;

exports[`useResponsive resize should update the matcher with a window.resize 2`] = `
<div>
  <h1>
    md
  </h1>
</div>
`;
